--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,7 @@ libs = ["lib"]
 test = "test"
 bytecode_hash = "none"
 cbor_metadata = false
-evm_version = "paris"
+evm_version = "cancun"
 optimizer = true
 optimizer_runs = 1_000_000
 
