--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
 [submodule "lib/contracts"]
 	path = lib/contracts
-	url = https://github.com/@layerzerolabs/lz-evm-protocol-v2/contracts
+	url = https://github.com/aerodrome-finance/contracts
 [submodule "lib/LayerZero-v2"]
 	path = lib/LayerZero-v2
 	url = https://github.com/LayerZero-Labs/LayerZero-v2
