--- a/.gitmodules
+++ b/.gitmodules
@@ -4,12 +4,18 @@
 [submodule "lib/openzeppelin-contracts"]
 	path = lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "lib/openzeppelin-contracts-upgradeable"]
+	path = lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
 [submodule "lib/contracts"]
 	path = lib/contracts
-	url = https://github.com/@layerzerolabs/lz-evm-protocol-v2/contracts
+	url = https://github.com/aerodrome-finance/contracts
+[submodule "lib/LayerZero"]
+	path = lib/LayerZero
+	url = https://github.com/LayerZero-labs/LayerZero
 [submodule "lib/LayerZero-v2"]
 	path = lib/LayerZero-v2
-	url = https://github.com/LayerZero-Labs/LayerZero-v2
+	url = https://github.com/LayerZero-labs/LayerZero-v2
 [submodule "lib/slipstream"]
 	path = lib/slipstream
 	url = https://github.com/aerodrome-finance/slipstream
